# Chennai-Vegetable-Price-Prediction-System

./: .gitignore  .vercelignore  README.md  dump.rdb  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements-vercel.txt  requirements.txt  vercel.json
api/: config.py  index.py  main.py  pyproject.toml
api/db/: database.py  models.py
api/routers/: ai_predict.py  alerts.py  analytics.py  forecast.py  predictions.py  price_history.py  prices.py  vegetables.py  vision.py  weather.py
api/schemas/: responses.py
api/services/: alert_service.py  notification_service.py  prediction_service.py  price_service.py  vision_service.py
config/: festivals.yaml  markets.yaml  model_params.yaml  vegetables.yaml
data/model_artifacts/: model_mapping.json
deployment/: Dockerfile.api  Dockerfile.ml  com.vegprice.retrain.plist  docker-compose.yml
deployment/nginx/: nginx.conf
mobile/: App.tsx  app.json  index.js  package-lock.json  package.json
mobile/src/: theme.ts
notebooks/: 01_eda.ipynb  03_model_comparison.ipynb
report/: README.md  api_reference.md  architecture.tex  main.tex  setup_guide.md
scripts/: daily_retrain.py  download_data.py  evaluate_models.py  generate_synthetic_history.py  seed_database.py  train_models.py
src/data/: dataset_builder.py  feature_engineer.py  preprocessor.py
src/evaluation/: metrics.py  model_comparator.py
src/models/: base_model.py
src/pipeline/: inference_pipeline.py  retraining.py  training_pipeline.py
src/vision/: augmentation.py  (+3 more)
tests/: conftest.py  test_api.py  test_data_pipeline.py  test_models.py
(+33 files in other folders)
